--- a/16sanalysis_workshop/16sworkshop/book/16sworkshop.tex
+++ b/16sanalysis_workshop/16sworkshop/book/16sworkshop.tex
@@ -195,8 +195,8 @@ We will try to cover the following material in the course:
   Project dataset : \href{https://www.dropbox.com/sh/qra6ohbsyt1icaz/AAACvlNjUhfkbkGIp_1KA2uCa?dl=0}{link}
 \end{itemize}
 
-\hypertarget{introduction-1}{%
-\chapter{Introduction}\label{introduction-1}}
+\hypertarget{basic-information}{%
+\chapter{Basic Information}\label{basic-information}}
 
 We are very excited to teach this workshop and share what we know with you all !
 
@@ -242,6 +242,9 @@ Key points are:
 
 \hypertarget{primer-removal}{%
 \chapter{Primer Removal}\label{primer-removal}}
+
+There are multiple ways in which you can remove primers sequences from your fastq files.
+\href{https://cutadapt.readthedocs.io/en/stable/index.html}{CutAdapt} and \href{http://www.usadellab.org/cms/?page=trimmomatic}{trimmomatic} are two widely used tools for short-read data. DADA2 package has its own removePrimers sequence function which is recommended for PacBio data.
 
 \hypertarget{cutadapt}{%
 \section{CutAdapt}\label{cutadapt}}
