--- a/16sanalysis_workshop/16sworkshop/index.Rmd
+++ b/16sanalysis_workshop/16sworkshop/index.Rmd
@@ -31,11 +31,8 @@ We will try to cover the following material in the course:
   - 10:30 - 10:45 am Break
   - 10:45 - 12 Generate sequence table and remove Chimeras
   - 12 -  1 pm Lunch break
-  - 1- 3 pm  Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object
-
-- Day3
-  - 9-10:30 am Using a phyloseq object to calculate alpha and beta diversity
-  - 10:30 on wards we will use a real world dataset to re-do what we have learned here
+  - 1 - 2 pm  Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object
+  - 2 - 4 pm on wards we will use a real world dataset to re-do what we have learned here
 
 
 ## Important links
