--- a/16sanalysis_workshop/16sworkshop/book/16sworkshop.tex
+++ b/16sanalysis_workshop/16sworkshop/book/16sworkshop.tex
@@ -166,17 +166,9 @@ We will try to cover the following material in the course:
   \item
     12 - 1 pm Lunch break
   \item
-    1- 3 pm Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object
-  \end{itemize}
-\item
-  Day3
-
-  \begin{itemize}
-  \tightlist
+    1 - 2 pm Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object
   \item
-    9-10:30 am Using a phyloseq object to calculate alpha and beta diversity
-  \item
-    10:30 on wards we will use a real world dataset to re-do what we have learned here
+    2 - 4 pm on wards we will use a real world dataset to re-do what we have learned here
   \end{itemize}
 \end{itemize}
 
